deployment/foo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-api
  labels:
    app: foo-api
spec:
  selector:
    app: foo-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
